[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Estaciones/Rele/estacion_a.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estaciones/Rele/sonido_rele.ogg" type="AudioStream" id=2]
[ext_resource path="res://Juego/Estaciones/Rele/estacion_b.png" type="Texture" id=3]
[ext_resource path="res://Juego/Estaciones/Rele/ReleMasa.gd" type="Script" id=4]
[ext_resource path="res://Juego/Estaciones/Rele/sonido_rele_2.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
resource_name = "activada"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/EstacionB:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/EstacionA:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/EstacionA2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ActivadoSFX:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ActivadoSFX:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2.5, 2.5 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "super_activada"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/EstacionB:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprites/EstacionA2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/EstacionA:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 1, 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ), Color( 0.823529, 0.0980392, 0.886275, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ActivadoSFX:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ActivadoSFX:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ActivadoSFX:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 499.362

[node name="ReleMasa" type="Node2D" groups=["minimap"]]
script = ExtResource( 4 )

[node name="Sprites" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )

[node name="EstacionA" type="Sprite" parent="Sprites"]
position = Vector2( 0, -47 )
texture = ExtResource( 1 )

[node name="EstacionA2" type="Sprite" parent="Sprites"]
position = Vector2( 0, 47 )
rotation = 3.14159
texture = ExtResource( 1 )

[node name="EstacionB" type="Sprite" parent="Sprites"]
modulate = Color( 0.823529, 0.0980392, 0.886275, 1 )
texture = ExtResource( 3 )

[node name="Animaciones" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/activada = SubResource( 2 )
anims/default = SubResource( 6 )
anims/spawn = SubResource( 3 )
anims/super_activada = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="ActivadoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 24.0
bus = "SFX"

[node name="DetectorPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorPlayer"]
shape = SubResource( 5 )

[connection signal="animation_finished" from="Animaciones" to="." method="_on_Animaciones_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="DetectorPlayer" to="." method="_on_DetectorPlayer_body_entered"]
